# Odoo-Model-Generator

./: CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  demo.py  my_config.yaml  pyproject.toml  requirements.txt  setup.py  test_generation.py
demo_output/event_management/: README.md  __init__.py  __manifest__.py
demo_output/event_management/demo/: event_custom_demo.xml  event_registration_demo.xml
demo_output/event_management/models/: __init__.py  event_custom.py  event_registration.py
demo_output/event_management/security/: ir.model.access.csv
demo_output/event_management/static/description/: index.html
demo_output/event_management/views/: event_custom_menu.xml  event_custom_views.xml  event_registration_menu.xml  event_registration_views.xml  menu_global.xml
examples/: advanced_example.py  basic_example.py
examples/config_examples/: crm_config.json  product_config.yaml
odoo_model_generator/: __init__.py  cli.py
odoo_model_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
odoo_model_generator/config/: __init__.py  default_config.py  field_types.py
odoo_model_generator/core/: __init__.py  generator.py  menu_builder.py  model_builder.py  module_builder.py  view_builder.py
odoo_model_generator/utils/: __init__.py  file_manager.py  formatters.py  validators.py
test_output/: test_config.yaml
test_output/test_from_config/: README.md  __init__.py  __manifest__.py
test_output/test_from_config/demo/: x_my_model_demo.xml
test_output/test_from_config/models/: __init__.py  x_my_model.py
test_output/test_from_config/security/: ir.model.access.csv
test_output/test_from_config/static/description/: index.html
test_output/test_from_config/static/src/css/: module.css
test_output/test_from_config/static/src/js/: module.js
test_output/test_from_config/views/: x_my_model_menu.xml  x_my_model_views.xml
test_output/test_module_advanced/: README.md  __init__.py  __manifest__.py
test_output/test_module_advanced/demo/: test_advanced_product_demo.xml  test_category_demo.xml
test_output/test_module_advanced/models/: __init__.py  test_advanced_product.py  test_category.py
test_output/test_module_advanced/security/: ir.model.access.csv
test_output/test_module_advanced/static/description/: index.html
test_output/test_module_advanced/views/: menu_global.xml  test_advanced_product_menu.xml  test_advanced_product_views.xml  test_category_menu.xml  test_category_views.xml
test_output/test_module_basic/: README.md  __init__.py  __manifest__.py
test_output/test_module_basic/demo/: test_product_demo.xml
test_output/test_module_basic/models/: __init__.py  test_product.py
test_output/test_module_basic/security/: ir.model.access.csv
test_output/test_module_basic/static/description/: index.html
test_output/test_module_basic/views/: test_product_menu.xml  test_product_views.xml
